2nd try
git-svn-id: http://isdb1.offis.uni-oldenburg.de/repos/odysseus/trunk@11686 aa0bda67-78ed-0310-a382-c5338b0f89ba

Former-commit-id: bec7cea10b9b0d43316a96e5f90eab5a160eb41a